fixed the headers display according to when timer ends, made button display to none once pressed..

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     </div>
     <section id="quizarea">
-        <div id="question">asdsad
+        <div id="question">
         </div>
 
         <article class="choices">
@@ -33,7 +33,7 @@
 
     <section id="timerarea">
 
-        <div id="thetimer">this is where the timer goes</div>
+        <div id="thetimer"></div>
     </section>
 
  <script src="./script.js"></script>
