figured out the answer verification and score keeping.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Alex's Javascript Quiz</title>
+    <title>Alex's Javascript Quiz</title>
     <link rel="stylesheet" href="./stylez.css">
-    
+
 </head>
 
 <body>
@@ -15,13 +15,16 @@
     </header>
 
     <div id="startbutton">
-        <button id="pressme">Start the quiz            
+        <button id="pressme">Start the quiz
         </button>
 
     </div>
     <section id="quizarea">
         <div id="question">
         </div>
+        <p class="score1"> </p>
+        <p class="score2"> </p>
+
 
         <article class="choices">
             <button id="a">#</button>
@@ -36,7 +39,7 @@
         <div id="thetimer"></div>
     </section>
 
- <script src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
