made ALOT of changes and finalized alot of the features. almost completed everything

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         </div>
         <p class="score1"> </p>
         <p class="score2"> </p>
+        <p class="totalscore"></p>
+        <button id="score">now what?</button>
+        <table id="scoretable">
+            <tr>
+                <th>Name</th>
+                <th>Score</th>
+            </tr>
+            <tr>
+                <td id="scorename"></td>
+                <td id="scorenumber"></td>
+                </tr>
+        </table>
 
 
         <article class="choices">
