final push with last changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="score1"> </p>
         <p class="score2"> </p>
         <p class="totalscore"></p>
-        <button id="score">now what?</button>
+        <button id="score">Click to View score!</button>
         <table id="scoretable">
             <tr>
                 <th>Name</th>
@@ -36,6 +36,7 @@
                 <td id="scorenumber"></td>
                 </tr>
         </table>
+        <button id="reset">Try Again?</button>
 
 
         <article class="choices">
